--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@considonet/g-env",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Browser environment detection helpers",
-  "main": "./src/index.js",
+  "main": "./src/index.js", 
+  "typings": "./src/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
