--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@considonet/g-env",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "description": "Browser environment detection helpers",
-  "main": "./src/index.js", 
-  "typings": "./src/index.d.ts",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,5 +12,11 @@
   ],
   "author": "ConsidoNet Solutions Paweł Gabryelewicz",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2"
+  }
 }
